# Lexicom

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
